PGCK-486 Fixed errors when working with libraries in the project tree

--- a/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
@@ -9,6 +9,8 @@ DatabaseType_unsupported_type = Unsupported database type:
 
 DbObjType_unsupported_type = Unsupported type: 
 
+FileUtils_error_while_read_uri_lib = Error while read library from URI : %s - %s 
+
 PgDiff_read_error = Error while reading pre/post script file: 
 
 ProjectUpdater_error_backup_restore = Error while restoring backups after update error! Please repair your project manually before continuing!
