PGCK-492 reduced timeout when test connection

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -87,7 +87,7 @@ DbStoreEditorDialog_dump_switch = Use external DB loader instead of JDBC
 
 DbStoreEditorDialog_failed_connection = Connection failed
 
-DbStoreEditorDialog_failed_connection_reason = Connection to database failed. Reason: 
+DbStoreEditorDialog_failed_connection_reason = Connection to database failed.
 
 DbStoreEditorDialog_ignore_file_list = Ignored objects files
 
@@ -1059,7 +1059,7 @@ dbStoreEditorDialog_db_info = DB Info
 
 dbStoreEditorDialog_empty_name = Please enter entry name.
 
-dbStoreEditorDialog_not_valid_port_number = Not valid port number: {0}
+dbStoreEditorDialog_not_valid_port_number = Not valid port number: 
 
 dbUpdatePrefPage_Enter_cmd_to_update_ddl_with_sql_script = Migration command\n(available variables: 
 
