--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -88,7 +88,7 @@ DbStoreEditorDialog_dump_switch = \u0418\u0441\u043F\u043E\u043B\u044C\u0437\u04
 
 DbStoreEditorDialog_failed_connection = \u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u044C\u0441\u044F
 
-DbStoreEditorDialog_failed_connection_reason = \u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u044C\u0441\u044F \u043A \u0431\u0430\u0437\u0435 \u0434\u0430\u043D\u043D\u044B\u0445. \u041F\u0440\u0438\u0447\u0438\u043D\u0430: 
+DbStoreEditorDialog_failed_connection_reason = \u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u043F\u043E\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u044C\u0441\u044F \u043A \u0431\u0430\u0437\u0435 \u0434\u0430\u043D\u043D\u044B\u0445.
 
 DbStoreEditorDialog_ignore_file_list = \u0424\u0430\u0439\u043B\u044B \u0438\u0441\u043A\u043B\u044E\u0447\u0435\u043D\u043D\u044B\u0445 \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432
 
@@ -1060,7 +1060,7 @@ dbStoreEditorDialog_db_info = \u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u
 
 dbStoreEditorDialog_empty_name = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430 \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u0437\u0430\u043F\u0438\u0441\u0438.
 
-dbStoreEditorDialog_not_valid_port_number = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u043F\u043E\u0440\u0442\u0430: {0} 
+dbStoreEditorDialog_not_valid_port_number = \u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u043F\u043E\u0440\u0442\u0430: 
 
 dbUpdatePrefPage_Enter_cmd_to_update_ddl_with_sql_script = \u041A\u043E\u043C\u0430\u043D\u0434\u0430 \u043C\u0438\u0433\u0440\u0430\u0446\u0438\u0438\n(\u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u043F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u044B\u0435: 
 
