PGCK-407 added option copy all errors messages

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -19,6 +19,8 @@ BuildDepsGraphDialog_show = Show:
 
 CodeFilter_search_by_code = Filter by object's SQL code:
 
+CodekeeperWorkbenchErrorHandler_copy_all = Copy all
+
 CommitDialog_privileges_must_be_saved = Only privilege and owners of database objects overrides can be saved due to library object modification!
 
 CommitDialog_save_privileges = Save privilege overrides separately (objects will not be updated)
@@ -330,6 +332,8 @@ DiffWizard_target = Target schema
 Duration_expected_format = Expected format: PnDTnHnMnS. See https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#toString--
 
 EclipseEnvironment_Error_SavePreferences = Could not save preferences file "{0}" .
+
+ErrorMessageDialog_dialog_title = Multiple problems have occurred
 
 FilterDialog_cancel = Cancel
 
