PGCK-517: added option for threads number

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -333,6 +333,16 @@ Duration_expected_format = Expected format: PnDTnHnMnS. See https://docs.oracle.
 
 EclipseEnvironment_Error_SavePreferences = Could not save preferences file "{0}" .
 
+EclipseIniWriter_change_manually = Changing the {0} parameter manually
+
+EclipseIniWriter_manual_editing_link = Information about .ini file is available at:
+
+EclipseIniWriter_replace_parameter_msg = Error while editing ini file: {2}\n\nTo change property manually you should replace "{0}..." with "{3}" parameter value in ini file and need fully restart Eclipse.\n\nini file location:\n{1}
+
+EclipseIniWriter_updated = Updated 
+
+Eclipse_restart_offer = You need to fully restart Eclipse for changes to take effect.
+
 ErrorMessageDialog_dialog_title = Multiple problems have occurred
 
 FilterDialog_cancel = Cancel
@@ -377,6 +387,12 @@ GeneralPrefPage_ignore_column_order = Ignore differences in table column order
 
 GeneralPrefPage_ignore_concurrent_modification = Ignore concurrent modification errors when reading DB
 
+GeneralPrefPage_number_of_loading_threads = Number of parser threads
+
+GeneralPrefPage_number_of_loading_threads_updated = Updated the number of loading threads
+
+GeneralPrefPage_number_of_thread = number of parser threads
+
 GeneralPrefPage_reuse_open_compare_editor = Reuse compare editor instead of opening new ones
 
 GeneralPrefPage_save_in_security_storage = Save passwords in Eclipse secure storage
@@ -388,6 +404,8 @@ GeneralPrefPage_show_full_code = Show code of all child objects when comparing
 GeneralPrefPage_simplify_view = Simple formatting for VIEWs when reading via JDBC (not recommended by PostgreSQL)
 
 GeneralPrefPage_time_to_clean_parser_cache = Free parser cache memory if not used for (minutes):
+
+GeneralPrefPage_with = with
 
 GetChanges_select_source = Choose source
 
@@ -401,17 +419,9 @@ GetSystemObjects_save_success_title = Snapshot created!
 
 GitUserReader_error_reading_local_changes = Error reading local changes
 
-HeapSizeCheckerDialog_heap_size_updated = Heap size updated
-
-HeapSizeCheckerDialog_manual_heap_editing = Error while editing eclipse.ini: {2}\nTo change heap size manually you should replace "-Xmx..." with "-Xmx{0}G" in eclipse.ini.\n\neclipse.ini location:\n{1}
-
-HeapSizeCheckerDialog_manual_heap_editing_link = Information about "eclipse.ini" is available at:
-
-HeapSizeCheckerDialog_manual_heap_editing_title = Changing the heap size parameter manually
+HeapSizeCheckerDialog_manual_heap_editing_title = the heap size
 
 HeapSizeCheckerDialog_new_heap_size = New heap size
-
-HeapSizeCheckerDialog_restart_offer = You need to fully restart Eclipse for changes to take effect.
 
 HeapSizeCheckerDialog_set_heap_size = Set heap size
 
