--- a/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
@@ -29,6 +29,8 @@ Table_TypeParameterChange = TYPE change - table: {0} original: {1} new: {2}
 
 UnknownDBFormat = Unknown DB format: {0}
 
+VerificationTriggerCreation = Changing trigger's state without creation is only allowed on partition tables.
+
 VerificationFunctionTreeListener_case_block = Using the case block without the else block is not allowed.
 
 VerificationFunctionTreeListener_quotation_marks = There should be no quotation marks in the table column name.
