PGCK-570: Added log in Cli version

--- a/ru.taximaxim.codekeeper.cli/src/ru/taximaxim/codekeeper/cli/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.cli/src/ru/taximaxim/codekeeper/cli/localizations/messages.properties
@@ -149,7 +149,33 @@ Main_cach_clear = Library cache cleared
 
 Main_danger_statements = Script contains dangerous statements: {0}. Use --allow-danger-ddl to override.
 
+Main_log_apply_migration_script = Apply migration script on target database
+
+Main_log_build_graph_deps = Building graph dependencies
+
+Main_log_contains_dangerous_statements = Migration script contains dangerous statements: {}
+
+Main_log_create_script = Starting creating script
+
+Main_log_finish_code_verify = Code verifying is finished
+
+Main_log_run_insert_data = Running insert data script on target database
+
+Main_log_running_error = Got error when application running
+
+Main_log_start_code_verify = Start of the code verification process
+
+Main_log_start_export_proj = Start to export project
+
+Main_log_start_insert_data = Start generating insert data script
+
+Main_log_start_update_proj = Start to update project
+
+Main_log_succes_finish = Successfully completed
+
 Main_show_stacktrace = Use -E to see exception stacktrace
+
+PgDiffCli_log_load_ignored_obj = Load ignored objects lists
 
 UsageHelp = Usage\n${tab}pgcodekeeper-cli [option]... SOURCE DEST\n${tab}pgcodekeeper-cli -s SOURCE -t DEST [option]...\n${tab}pgcodekeeper-cli --mode PARSE -o OUTDIR [--update-project] [option]... SOURCE\n${tab}pgcodekeeper-cli --mode GRAPH [option]... SOURCE\n${tab}pgcodekeeper-cli --mode INSERT --insert-name <name> --insert-filter <filter> [option]... SOURCE\n${tab}pgcodekeeper-cli --mode VERIFY --verify-rule-set <path> --verify-source <path> [option]...\n\n{0}\n{1}\n\nLibrary load order\n${tab}Libraries are loaded in the following order:\n${tab}${tab}1. Libraries in specified XML lists.\n${tab}${tab}2. Explicitly specified libraries.\n${tab}${tab}3. Explicitly specified libraries without privileges.\n${tab}In each group order is defined by the given argument order. Within XMLs entry order is used.\n${tab}Objects loaded first in this sequence may override ones loaded later (if --lib-safe-mode is off).\n\nLive database connections\n${tab}Use JDBC connection URL to specify live databases\n${tab}${tab}PostgreSQL: https://jdbc.postgresql.org/documentation/head/connect.html\n${tab}${tab}MS SQL: https://docs.microsoft.com/sql/connect/jdbc/building-the-connection-url\n${tab}${tab}ClickHouse: https://clickhouse.com/docs/en/integrations/java#configuration
 
