DBTOOLS-1536 added constraint in insert mode

--- a/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
@@ -47,6 +47,10 @@ IgnoreParser_log_load_ignored_list = Loading file IgnoreList: {}
 
 IgnoreSchemaList_log_ignored_schema = The scheme {} is completely ignored
 
+InsertWriter_select_size_error_message = SELECT returned 1000 rows. INSERT mode is not designed to copy such a large amount of data. Please specify a valid condition for "--insert-filter".
+
+InsertWriter_select_size_info_message = SELECT returned {} rows
+
 JdbcChLoader_log_connection_db = Connecting to the database
 
 JdbcLoaderBase_log_check_extension = Checking for pg_dbo_timestamp extension
