updated by feedback

--- a/ru.taximaxim.codekeeper.cli/src/ru/taximaxim/codekeeper/cli/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.cli/src/ru/taximaxim/codekeeper/cli/localizations/messages.properties
@@ -175,6 +175,8 @@ Main_log_succes_finish = Successfully completed
 
 Main_show_stacktrace = Use -E to see exception stacktrace
 
+PgDiffCli_error_while_load_database = Error while load database
+
 PgDiffCli_log_lib_have_dupl = Library have duplicate
 
 PgDiffCli_log_load_ignored_obj = Load ignored objects lists
