DBTOOLS-1571 fixed naming in diffwizard

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -325,9 +325,9 @@ DiffWizard_select_db_tz = Please select DB timezone
 
 DiffWizard_show_advanced_options = Show advanced options
 
-DiffWizard_source = Original schema
+DiffWizard_source = Source
 
-DiffWizard_target = Target schema
+DiffWizard_target = Target
 
 Duration_expected_format = Expected format: PnDTnHnMnS. See https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#toString--
 
@@ -1168,9 +1168,9 @@ differ_reverse_diff = Reverse diff...
 diffwizard_diffpage_select = Select a database schema comparison
 
 # diff wizard
-diffwizard_diffpage_source_warning = Original database schema is not selected!
+diffwizard_diffpage_source_warning = Source is not selected!
 
-diffwizard_diffpage_target_warning = Target database schema is not selected!
+diffwizard_diffpage_target_warning = Target is not selected!
 
 diffwizard_pagepartial_description = Select the items for updating.
 
