--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages_ru_RU.properties
@@ -326,9 +326,9 @@ DiffWizard_select_db_tz = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442
 
 DiffWizard_show_advanced_options = \u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0434\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0435 \u043E\u043F\u0446\u0438\u0438
 
-DiffWizard_source = \u0418\u0441\u0445\u043E\u0434\u043D\u0430\u044F \u0441\u0445\u0435\u043C\u0430
+DiffWizard_source = \u0418\u0441\u0442\u043E\u0447\u043D\u0438\u043A
 
-DiffWizard_target = \u0426\u0435\u043B\u0435\u0432\u0430\u044F \u0441\u0445\u0435\u043C\u0430
+DiffWizard_target = \u041F\u0440\u0438\u0435\u043C\u043D\u0438\u043A
 
 Duration_expected_format = \u041E\u0436\u0438\u0434\u0430\u0435\u043C\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442: PnDTnHnMnS. \u0421\u043C. https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#toString--
 
@@ -1169,9 +1169,9 @@ differ_reverse_diff = \u041E\u0431\u0440\u0430\u0442\u043D\u043E\u0435 \u0441\u0
 diffwizard_diffpage_select = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0441\u0445\u0435\u043C\u044B \u0431\u0430\u0437 \u0434\u0430\u043D\u043D\u044B\u0445 \u0434\u043B\u044F \u0441\u0440\u0430\u0432\u043D\u0435\u043D\u0438\u044F
 
 # diff wizard
-diffwizard_diffpage_source_warning = \u0418\u0441\u0445\u043E\u0434\u043D\u0430\u044F \u0441\u0445\u0435\u043C\u0430 \u0431\u0430\u0437\u044B \u0434\u0430\u043D\u043D\u044B\u0445 \u043D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D\u0430!
+diffwizard_diffpage_source_warning = \u0418\u0441\u0442\u043E\u0447\u043D\u0438\u043A \u043D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D!
 
-diffwizard_diffpage_target_warning = \u0426\u0435\u043B\u0435\u0432\u0430\u044F \u0441\u0445\u0435\u043C\u0430 \u0431\u0430\u0437\u044B \u0434\u0430\u043D\u043D\u044B\u0445 \u043D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D\u0430!
+diffwizard_diffpage_target_warning = \u041F\u0440\u0438\u0435\u043C\u043D\u0438\u043A \u043D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D!
 
 diffwizard_pagepartial_description = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u044B \u0434\u043B\u044F \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F.
 
