DBTOOLS-1585 fixed error message

--- a/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
@@ -1,4 +1,6 @@
 
+AbstractAnalysisLauncher_error_prefix = Error occurs during analysis: %s - %s
+
 AbstractExprWithNmspc_log_ambiguos_ref = Ambiguous reference: {}
 
 AbstractExprWithNmspc_log_cte_contains_cols = Cte contains fewer columns than specified: {}
@@ -18,6 +20,8 @@ AbstractPgTable_log_inherits_not_found = Inherit table not found: {}.{}
 AbstractPgTable_log_schemas_not_found = Inherit schema not found: {}
 
 AbstractStatementReader_start = Start: 
+
+AlterTriggerError = Changing trigger's state without creation is only allowed on partition tables.
 
 Connection_DatabaseJdbcAccessError = Error while reading database schema via JDBC, error occured while processing {1}\n{0}
 
@@ -162,8 +166,6 @@ TreeFlattener_log_ignore_obj = Ignored object: {}
 Utils_log_err_deserialize = Error while deserialize object!
 
 Utils_log_err_serialize = Error while serialize object!
-
-AlterTriggerError = Changing trigger's state without creation is only allowed on partition tables.
 
 VerificationFunctionTreeListener_case_block = Using the case block without the else block is not allowed.
 
