DBTOOLS-1641 -Security Hotspots: fixed sonar errors

--- a/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.core/src/main/java/ru/taximaxim/codekeeper/core/localizations/messages.properties
@@ -37,6 +37,8 @@ DepcyGraph_log_no_such_table = Parent table not found for {}
 
 DepcyGraph_log_remove_deps = Remove dependency from {0} to {1}
 
+FileUtils_creating_temp_directory=Creating temp directory {}
+FileUtils_creating_temp_file=Creating temp file {}
 FileUtils_error_while_read_uri_lib = Error while read library from URI : %s - %s 
 
 Function_log_variable_not_found = Variable not found: {}
