DBTOOLS-1703 added option to export dbstore without password

--- a/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
+++ b/ru.taximaxim.codekeeper.ui/src/ru/taximaxim/codekeeper/ui/localizations/messages.properties
@@ -145,6 +145,8 @@ DbStorePrefPage_db_group = Group
 
 DbStorePrefPage_export_db = Export connection list
 
+DbStorePrefPage_export_dialog = Export passwords?
+
 DbStorePrefPage_import_db_list = Import connection list
 
 DbStorePrefPage_opening_error = Error while opening connection list
